--- a/style.css
+++ b/style.css
@@ -1,4 +1,315 @@
 html { box-sizing: border-box; }
 *, ::after, ::before { box-sizing: inherit; }
 
+/* 
+#FAFAFA - pozadí stránky
+#000000 - černá
+#8B8B8B - šedá
+#FFFFFF - bíla
+#407BFF - primární modrá
+*/
+
+
+body{
+    margin: auto;
+    padding: 60px 80px;
+    background-color: #FAFAFA;
+    font-family: 'Montserrat', sans-serif;
+    width: 1200px;
+}
+
+section{
+    margin-bottom: 80px;
+}
+
+.intro{
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-uvod{
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 490px;
+    justify-content: center;
+}
+
+.uvod-foto{
+    flex: 0 0 490px;
+}
+
+.kancelar,
+.delegati{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    
+}
+
+.kancelar-text{
+    order: 2;
+    flex: 0 0 430px;
+}
+.kancelar-ikony{
+    order: 1;
+    flex: 0 0 550px;
+}
+
+.delegati-text{
+    flex: 0 0 430px;
+}
+.delegati-ikony{
+    flex: 0 0 550px;
+}
+
+.header{
+    margin-bottom: 40px;
+}
+
+h1{
+    margin: 0;
+    font-size: 28px;
+}
+
+h2{
+    font-size: 16px;
+}
+.paragraf1{
+    margin: 0;
+}
+
+button{
+    color: #FFFFFF;
+    border-radius: 20px;
+    font-size: 14px;
+    width: 195px;
+    height: 40px;
+    margin-top: 30px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.dobrodruzstvi{
+    background-color: #407BFF;
+    margin-right: 20px;
+}
+
+.pohoda{
+    background-color: #8B8B8B;
+}
+
+.kancelar-ikony,
+.delegati-ikony{
+    display: flex;
+    justify-content: space-between;
+}
+
+.box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 10px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    text-align: center;
+    flex: 0 1 calc(100% / 3 - 10px);
+
+    font-size: 13px;
+}
+
+.icon{
+    width: 45px;
+    height: 40px;
+}
+
+
+
+@media screen and (min-width: 640px) and (max-width: 1100px){
+    
+    body{
+        padding: 60px 20px;
+        text-align: center;
+        width: 770px;
+    }
+
+    
+    .intro{
+        display: flex;
+        justify-content: center;
+        
+        flex-direction:column;
+    }
+    
+    .header-uvod{
+        display: flex;
+        flex-direction: column;
+        flex: 0 0 100%;
+        justify-content: center;
+
+        order:2;
+    }
+    
+    .uvod-foto{
+        width: 400px;
+        height: 330px;
+
+        flex: 0 0 100%;
+        align-self: center;
+
+        order:1;
+    }
+
+    
+    .kancelar,
+    .delegati{
+    display: flex;
+    flex-direction: column;
+}
+
+    .kancelar-text{
+        order: 1;
+        flex: 0 0 100%;
+    }
+
+    .kancelar-ikony{
+        order: 2;
+        flex: 0 0 100%;
+    }
+    
+    .delegati-text{
+        flex: 0 0 100%;
+    }
+    .delegati-ikony{
+        flex: 0 0 100%;
+    }
+    
+   .paragraf2,
+   .paragraf3{
+       margin-bottom: 40px;
+       font-size: 16px;
+   }
+
+   .header{
+       margin-top: 30px;
+}
+
+}
+
+@media screen and (max-width: 640px){
+
+    body{
+        padding: 60px 20px;
+        text-align: center;
+        width: 500px;
+    }
+
+    section{
+        margin-bottom: 60px;
+    }
+
+
+    .intro{
+        display: flex;
+        justify-content: center;
+
+        flex-direction:column;
+    }
+    
+    .header-uvod{
+        display: flex;
+        flex-direction: column;
+        flex: 0 0 100%;
+        justify-content: center;
+
+        order:2;
+    }
+
+    .uvod-text{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+    .dobrodruzstvi{
+        margin: 30px auto 10px;
+    }
+
+    .pohoda{
+        margin: 0;
+    }
+    
+    .uvod-foto{
+        width: 400px;
+        height: 330px;
+
+        flex: 0 0 100%;
+        align-self: center;
+
+        order:1;
+    }
+
+
+    .kancelar,
+    .delegati{
+    display: flex;
+    flex-direction: column;
+}
+
+    .kancelar-text{
+        order: 1;
+        flex: 0 0 100%;
+    }
+
+    .kancelar-ikony{
+        order: 2;
+        flex: 0 0 100%;
+    }
+    
+    .delegati-text{
+        flex: 0 0 100%;
+    }
+    .delegati-ikony{
+        flex: 0 0 100%;
+    }
+
+    .kancelar-ikony,
+    .delegati-ikony{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.box{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 20px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    text-align: center;
+    flex: 1 0 100%;
+    
+
+    margin-bottom: 15px;
+}
+
+.icon{
+    margin-right: 30px;
+}
+
+   .paragraf2,
+   .paragraf3{
+       margin-bottom: 40px;
+       font-size: 16px;
+   }
+
+   .header{
+       margin-top: 30px;
+}
+
+}
+
+
+
+
 
